@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{519, 62}, {1056, 966}}</string>
+	<string>{{497, 83}, {914, 1077}}</string>
 </dict>
 </plist>
